[project]
name = "servipal-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "rq>=2.6.1",
    "structlog>=25.5.0",
    "supabase>=2.27.2",
    "uvicorn>=0.40.0",
]
